--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "passport-azure-ad": "^4.3.0",
     "passport-custom": "^1.1.1",
     "passport-google-oauth": "^2.0.0",
+    "passport-openid": "^0.4.0",
+    "passport-openidconnect": "^0.1.1",
     "passport-saml": "^1.3.5",
     "passport-twitter": "^1.0.4",
     "passport-windowslive": "^1.0.2",
